--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.21.5",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
+    "chart.js": "^4.3.0",
     "core-js": "^3.30.2",
     "css-loader": "^6.7.3",
     "mini-css-extract-plugin": "^2.7.5",
