--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "request": "^2.88.2",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
-    "webpack": "^5.82.0",
-    "webpack-cli": "^5.1.0"
+    "webpack": "^5.82.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
   }
 }
